--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -22,7 +22,7 @@ jobs:
             name: Apple CMake (x86)
 
     runs-on: [self-hosted, "${{ matrix.config.os }}", "${{ matrix.config.arch }}", cmake, builder]
-    name: ${{ matrix.os }}
+    name: ${{ matrix.config.os }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
