--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -26,6 +26,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: CMake & Clang versions
+        run: |
+          cmake --version
+          clang --version
       - name: CMake Cleanup
         run: cmake -E remove_directory ${{github.workspace}}/build
       - name: CMake Setup
