--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,11 +15,14 @@ jobs:
       matrix:
         config:
           - arch: ARM64
-            os: macOS
-            name: Apple CMake (ARM)
+            os: big_sur
+            name: Apple Big Sur (ARM)
           - arch: x64
-            os: macOS
-            name: Apple CMake (x86)
+            os: big_sur
+            name: Apple Big Sur (x86)
+          - arch: x64
+            os: catalina
+            name: Apple Catalina (x86)
 
     runs-on: [self-hosted, "${{ matrix.config.os }}", "${{ matrix.config.arch }}", cmake, builder]
     name: ${{ matrix.config.name }}
