--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -24,7 +24,7 @@ jobs:
             os: catalina
             name: Apple Catalina (x86)
 
-    runs-on: [self-hosted, "${{ matrix.config.os }}", "${{ matrix.config.arch }}", cmake, builder]
+    runs-on: [self-hosted, macOS, "${{ matrix.config.os }}", "${{ matrix.config.arch }}", cmake, builder]
     name: ${{ matrix.config.name }}
     steps:
       - name: Checkout
