--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -43,3 +43,6 @@ jobs:
       - name: CMake Build
         working-directory: ${{github.workspace}}/build
         run: cmake --build .
+      - name: CTest
+        working-directory: ${{github.workspace}}/build
+        run: ctest
