--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -45,4 +45,4 @@ jobs:
         run: cmake --build .
       - name: CTest
         working-directory: ${{github.workspace}}/build
-        run: ctest
+        run: ctest -V
