--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -42,7 +42,7 @@ jobs:
           command: cd build && cmake ${{github.workspace}} -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DSTEINWURF_RESOLVE_OPTIONS="--git_protocol=git@ $EXTRA_RESOLVE_OPTIONS"
       - name: CMake Build
         working-directory: ${{github.workspace}}/build
-        run: cmake --build .
+        run: cmake --build . -j
       - name: CTest
         working-directory: ${{github.workspace}}/build
         run: ctest -V
